# OpenGLES-demo

app/: build.gradle
app/src/androidTest/java/com/android/opengldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MyRender.cpp
app/src/main/cpp/render/: MyGLRenderContext.cpp
app/src/main/java/com/android/opengldemo/: MainActivity.java  MyGLSurfaceView.java  MyNativeRender.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/android/opengldemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
